# django-live-components

./: .gitignore  Makefile  README.md  pyproject.toml  random_notifications.py
components/: counter.py  notifications.py  stateless_counter.py  urls.py
src/app/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
src/app/migrations/: 0001_initial.py  0002_counter_delete_tweet.py  0003_notification.py
src/components/: notification.py  notifications.py  urls.py
src/config/: asgi.py  settings.py  urls.py
src/templates/: _base.html  index.html
templates/: _base.html  index.html  tweet.html
templates/registration/: register.html
