[tool.poetry]
name = "django-live-components"
version = "0.1.0"
description = ""
authors = ["Dylan Castillo <dylanjcastillo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
django-components = {git = "https://github.com/EmilStenstrom/django-components.git"}
channels = {extras = ["daphne"], version = "^4.0.0"}
channels-redis = "^4.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
ruff = "^0.1.14"
djlint = "^1.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
