[tool.poetry]
name = "django-live-components"
version = "0.1.0"
description = ""
authors = ["Dylan Castillo <dylan@iwanalabs.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
django-components = "0.34.1"
redis = "^5.0.1"
daphne = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
ruff = "^0.1.14"
djlint = "^1.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
